--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
         <div class="modal-body">
           <form name="reserve" action="index.html" method="get" onsubmit="validate();">
             <div class="formData">
-              <label>Prénom</label><br>
+              <label id="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
             </div>
             <div class="formData">
-              <label>Nom</label><br>
+              <label id="last">Nom</label><br>
               <input class="text-control" type="text" id="last" name="last" /><br>
             </div>
             <div class="formData">
-              <label>E-mail</label><br>
+              <label id="email">E-mail</label><br>
               <input class="text-control" type="email" id="email" name="email" /><br>
             </div>
             <div class="formData">
-              <label>Date de naissance</label><br>
+              <label id="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
             </div>
             <div class="formData">
-              <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+              <label id="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
             </div>
             <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
