--- a/index.html
+++ b/index.html
@@ -54,26 +54,42 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="validate();">
+          <form id="reserve" name="reserve" action="index.html" method="get" onsubmit="return validate();">
             <div class="formData">
-              <label id="first">Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
+              <label for="first">Prénom</label><br>
+              <input class="text-control" type="text" id="first" name="first" minlength="2"/><br>
+              <i class="fa fa-check-circle" aria-hidden="true"></i>
+              <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+              <small>Message d'erreur</small>
             </div>
             <div class="formData">
-              <label id="last">Nom</label><br>
+              <label for="last">Nom</label><br>
               <input class="text-control" type="text" id="last" name="last" /><br>
+              <i class="fa fa-check-circle" aria-hidden="true"></i>
+              <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+              <small>Message d'erreur</small>
             </div>
             <div class="formData">
-              <label id="email">E-mail</label><br>
+              <label for="email">E-mail</label><br>
               <input class="text-control" type="email" id="email" name="email" /><br>
+              <i class="fa fa-check-circle" aria-hidden="true"></i>
+              <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+              <small>Message d'erreur</small>
             </div>
             <div class="formData">
-              <label id="birthdate">Date de naissance</label><br>
+              <label for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
+              <i class="fa fa-check-circle" aria-hidden="true"></i>
+              <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+              <small>Message d'erreur</small>
             </div>
             <div class="formData">
-              <label id="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+              <i class="fa fa-check-circle" aria-hidden="true"></i>
+              <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+              <small>Message d'erreur</small>
+              <p class="error"></p>
             </div>
             <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
             <div class="formData">
@@ -117,7 +133,7 @@
               </label>
               <br>
             </div>
-            <input class="btn-submit" type="submit" class="button" value="C'est parti" id="btn-submit" />
+            <input class="btn-submit" type="submit" class="button" value="C'est parti" id="btn-submit"/>
           </form>
         </div>
       </div>
