--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/modal.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
+  <script src="./js/modal.js" defer></script>
 </head>
 
 <body>
@@ -54,37 +55,36 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form id="reserve" name="reserve" action="index.html" method="get" onsubmit="return validate();">
+          <form id="reserve" name="reserve" action="index.html" method="get">
             <div class="formData">
               <label for="first">Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first" minlength="2"/>
+              <input class="text-control" type="text" id="first" name="first" minlength="2" value="pascal"/>
               <i class="fa fa-check-circle" aria-hidden="true"></i>
               <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
             </div>
             <div class="formData">
               <label for="last">Nom</label><br>
-              <input class="text-control" type="text" id="last" name="last" />
+              <input class="text-control" type="text" id="last" name="last" value="allau" />
               <i class="fa fa-check-circle" aria-hidden="true"></i>
               <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
             </div>
             <div class="formData">
               <label for="email">E-mail</label><br>
-              <input class="text-control" type="email" id="email" name="email" />
+              <input class="text-control" type="email" id="email" name="email" value="pascal.allau@laposte.net" />
               <i class="fa fa-check-circle" aria-hidden="true"></i>
               <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
             </div>
             <div class="formData">
               <label for="birthdate">Date de naissance</label><br>
-              <input class="text-control" type="date" id="birthdate" name="birthdate" />
+              <input class="text-control" type="date" id="birthdate" name="birthdate" value="1958-10-10" />
               <i class="fa fa-check-circle" aria-hidden="true"></i>
               <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
             </div>
             <div class="formData">
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" value="9">
               <i class="fa fa-check-circle" aria-hidden="true"></i>
               <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-              <small>Message d'erreur</small>
             </div>
             <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
             <div class="formData">
@@ -139,7 +139,6 @@
       Copyright 2014 - 2022, GameOn Inc.
     </p>
   </footer>
-  <script src="./js/modal.js"></script>
 </body>
 
 </html>
