css mobile first

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <img alt="logo" src="./assets/img/Logo.png" width="250" height="45" />
       </div>
       <div class="main-navbar">
-        <a href="#" class="active"><span>Accueil</span></a>
+        <a href="#"><span>Accueil</span></a>
         <a href="#"><span>Détails de l'évènement</span></a>
         <a href="#"><span>À propos</span></a>
         <a href="#"><span>Contact</span></a>
         <a href="#"><span>Évènements passés</span></a>
-        <a href="javascript:void(0);" class="icon" onclick="editNav()">
-          <i class="fa fa-bars"></i>
+        <a href="javascript:void(0);" class="icon">
+          <i class="fa fa-bars fa-custom fa-2x"></i>
         </a>
       </div>
     </div>
@@ -88,6 +88,7 @@
               method="get"
               action="#"
               autocomplete="off"
+              no-validate
             >
               <div class="formData">
                 <label for="first">Prénom</label><br />
@@ -99,8 +100,10 @@
                   minlength="2"
                   value="qw"
                 />
-                <i class="fa fa-check-circle" aria-hidden="true"></i>
-                <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                <div class="fa-icon">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                </div>
               </div>
               <div class="formData">
                 <label for="last">Nom</label><br />
@@ -111,8 +114,10 @@
                   name="last"
                   value="qw"
                 />
-                <i class="fa fa-check-circle" aria-hidden="true"></i>
-                <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                <div class="fa-icon">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                </div>
               </div>
               <div class="formData">
                 <label for="email">E-mail</label><br />
@@ -123,8 +128,10 @@
                   name="email"
                   value="q@q.qq"
                 />
-                <i class="fa fa-check-circle" aria-hidden="true"></i>
-                <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                <div class="fa-icon">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                </div>
               </div>
               <div id="formBirthdate" class="formData">
                 <label for="birthdate">Date de naissance</label><br />
@@ -135,8 +142,10 @@
                   name="birthdate"
                   value="2000-10-11"
                 />
-                <i class="fa fa-check-circle" aria-hidden="true"></i>
-                <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                <div class="fa-icon">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                </div>
               </div>
               <div id="formQuantity" class="formData">
                 <label for="quantity"
@@ -152,8 +161,10 @@
                   max="99"
                   value="2"
                 />
-                <i class="fa fa-check-circle" aria-hidden="true"></i>
-                <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                <div class="fa-icon">
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                </div>
               </div>
               <p class="text-label">
                 A quel tournoi souhaitez-vous participer cette année ?
@@ -199,6 +210,7 @@
                   name="location"
                   value="Seattle"
                 />
+                <div class="fa-icon"></div>
                 <label class="checkbox-label" for="location3">
                   <span
                     class="checkbox-icon"
@@ -295,13 +307,7 @@
           </div>
         </div>
       </div>
-      <div
-        id="successModal"
-        class="modal"
-        aria-hidden="true"
-        role="dialog"
-        aria-labelledby="modalTitle"
-      >
+      <div id="successModal" class="modal" aria-hidden="true" role="dialog">
         <div class="modal-content">
           <span
             id="dismissSuccessModal"
@@ -311,6 +317,7 @@
           ></span>
           <div class="modal-body" role="document">
             <h1>Merci pour votre inscription</h1>
+            <button class="button btn-submit">Fermer</button>
           </div>
         </div>
       </div>
