bugFix: delete form value in html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
                   id="first"
                   name="first"
                   minlength="2"
-                  value="qw"
                 />
                 <div class="fa-icon">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
@@ -107,13 +106,7 @@
               </div>
               <div class="formData">
                 <label for="last">Nom</label><br />
-                <input
-                  class="text-control"
-                  type="text"
-                  id="last"
-                  name="last"
-                  value="qw"
-                />
+                <input class="text-control" type="text" id="last" name="last" />
                 <div class="fa-icon">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
                   <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
@@ -126,7 +119,6 @@
                   type="email"
                   id="email"
                   name="email"
-                  value="q@q.qq"
                 />
                 <div class="fa-icon">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
@@ -140,7 +132,6 @@
                   type="date"
                   id="birthdate"
                   name="birthdate"
-                  value="2000-10-11"
                 />
                 <div class="fa-icon">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
@@ -159,7 +150,6 @@
                   name="quantity"
                   min="0"
                   max="99"
-                  value="2"
                 />
                 <div class="fa-icon">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
