bugFix: eventListener editNav double

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img alt="logo" src="./assets/img/Logo.png" width="250" height="45" />
       </div>
       <div class="main-navbar">
-        <a href="javascript:void(0);" class="icon">
+        <a href="#" class="icon">
           <i class="fa fa-bars"></i>
         </a>
         <a href="#" class="active"><span>Accueil</span></a>
@@ -201,7 +201,6 @@
                   name="location"
                   value="Seattle"
                 />
-                <div class="fa-icon"></div>
                 <label class="checkbox-label" for="location3">
                   <span
                     class="checkbox-icon"
