--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Reservation</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="./css/modal.css" />
     <link
       rel="stylesheet"
