--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img alt="logo" src="./assets/img/Logo.png" width="250" height="45" />
       </div>
       <div class="main-navbar">
-        <a href="#" class="icon">
+        <a href="#" class="icon" aria-label="menu">
           <i class="fa fa-bars"></i>
         </a>
         <a href="#" class="active"><span>Accueil</span></a>
@@ -46,7 +46,7 @@
           </p>
           <button
             id="btn1"
-            class="btn-signup modal-btn"
+            class="btn-signup button"
             aria-haspopup="dialog"
             aria-controls="dialog"
             type="button"
@@ -59,7 +59,7 @@
         </div>
         <button
           id="btn2"
-          class="btn-signup modal-btn"
+          class="btn-signup button"
           aria-haspopup="dialog"
           aria-controls="dialog"
           type="button"
@@ -71,29 +71,40 @@
       <div
         class="modal"
         id="dialog"
-        aria-modal="false"
+        aria-modal="true"
         aria-hidden="true"
         aria-label="Inscription"
+        tabindex="-1"
         role="dialog"
       >
-        <div class="modal-content">
-          <span
-            id="dismissModal"
-            class="modal-close"
-            title="Fermer la fenêtre modale"
-            data-dismiss="dialog"
-          ></span>
-          <div class="modal-body" role="document">
+        <div class="modal-content" role="document">
+          <div class="modal-header">
+            <h2 id="dialog-title" class="dialog-title">
+              Formulaire d'inscription
+            </h2>
+            <span
+              tabindex="0"
+              role="button"
+              id="dismissModal"
+              class="modal-close"
+              aria-label="Fermer"
+              title="Fermer la fenêtre modale"
+              data-dismiss="dialog"
+            ></span>
+          </div>
+          <div class="modal-body">
             <form
               id="reserve"
               name="reserve"
               method="get"
               action="#"
               autocomplete="off"
+              novalidate
             >
               <div class="formData">
                 <label for="first">Prénom</label><br />
                 <input
+                  form="reserve"
                   class="text-control"
                   type="text"
                   id="first"
@@ -107,7 +118,13 @@
               </div>
               <div class="formData">
                 <label for="last">Nom</label><br />
-                <input class="text-control" type="text" id="last" name="last" />
+                <input
+                  form="reserve"
+                  class="text-control"
+                  type="text"
+                  id="last"
+                  name="last"
+                />
                 <div class="fa-icon">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
                   <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
@@ -116,6 +133,7 @@
               <div class="formData">
                 <label for="email">E-mail</label><br />
                 <input
+                  form="reserve"
                   class="text-control"
                   type="email"
                   id="email"
@@ -129,6 +147,7 @@
               <div id="formBirthdate" class="formData">
                 <label for="birthdate">Date de naissance</label><br />
                 <input
+                  form="reserve"
                   class="text-control"
                   type="date"
                   id="birthdate"
@@ -145,6 +164,7 @@
                   ?</label
                 ><br />
                 <input
+                  form="reserve"
                   type="number"
                   class="text-control"
                   id="quantity"
@@ -162,6 +182,7 @@
               </p>
               <div id="formRadio" class="formData">
                 <input
+                  form="reserve"
                   class="checkbox-input"
                   type="radio"
                   id="location1"
@@ -179,6 +200,7 @@
                   New York</label
                 >
                 <input
+                  form="reserve"
                   class="checkbox-input"
                   type="radio"
                   id="location2"
@@ -196,6 +218,7 @@
                   San Francisco</label
                 >
                 <input
+                  form="reserve"
                   class="checkbox-input"
                   type="radio"
                   id="location3"
@@ -213,6 +236,7 @@
                   Seattle</label
                 >
                 <input
+                  form="reserve"
                   class="checkbox-input"
                   type="radio"
                   id="location4"
@@ -230,6 +254,7 @@
                   Chicago</label
                 >
                 <input
+                  form="reserve"
                   class="checkbox-input"
                   type="radio"
                   id="location5"
@@ -247,6 +272,7 @@
                   Boston</label
                 >
                 <input
+                  form="reserve"
                   class="checkbox-input"
                   type="radio"
                   id="location6"
@@ -267,6 +293,7 @@
 
               <div id="formMentions" class="formData">
                 <input
+                  form="reserve"
                   class="checkbox-input"
                   type="checkbox"
                   id="checkbox1"
@@ -274,6 +301,7 @@
                 />
                 <label class="checkbox2-label" for="checkbox1">
                   <span
+                    aria-label="conditions générales d'utilisation"
                     class="checkbox-icon"
                     aria-checked="false"
                     role="checkbox"
@@ -283,6 +311,7 @@
                 </label>
                 <br />
                 <input
+                  form="reserve"
                   class="checkbox-input"
                   type="checkbox"
                   id="checkbox2"
@@ -290,6 +319,7 @@
                 />
                 <label class="checkbox2-label" for="checkbox2">
                   <span
+                    aria-label="newsletter"
                     class="checkbox-icon"
                     aria-checked="false"
                     role="checkbox"
@@ -310,20 +340,7 @@
             </form>
           </div>
         </div>
-      </div>
-      <div id="successModal" class="modal" aria-hidden="true" role="dialog">
-        <div class="modal-content">
-          <span
-            id="dismissSuccessModal"
-            class="modal-close"
-            title="Fermer la fenêtre modale"
-            data-dismiss="dialog"
-          ></span>
-          <div class="modal-body" role="document">
-            <h1>Merci pour votre inscription</h1>
-            <button class="button btn-submit">Fermer</button>
-          </div>
-        </div>
+        <div class="modal-mask"></div>
       </div>
     </main>
     <footer>
