--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         aria-modal="true"
         aria-hidden="true"
         aria-label="Inscription"
-        tabindex="-1"
         role="dialog"
       >
         <div class="modal-content" role="document">
@@ -102,7 +101,7 @@
               novalidate
             >
               <div class="formData">
-                <label for="first">Prénom</label><br />
+                <label for="first">Prénom</label>
                 <input
                   form="reserve"
                   class="text-control"
@@ -117,7 +116,7 @@
                 </div>
               </div>
               <div class="formData">
-                <label for="last">Nom</label><br />
+                <label for="last">Nom</label>
                 <input
                   form="reserve"
                   class="text-control"
@@ -131,7 +130,7 @@
                 </div>
               </div>
               <div class="formData">
-                <label for="email">E-mail</label><br />
+                <label for="email">E-mail</label>
                 <input
                   form="reserve"
                   class="text-control"
@@ -145,7 +144,7 @@
                 </div>
               </div>
               <div id="formBirthdate" class="formData">
-                <label for="birthdate">Date de naissance</label><br />
+                <label for="birthdate">Date de naissance</label>
                 <input
                   form="reserve"
                   class="text-control"
@@ -162,7 +161,7 @@
                 <label for="quantity"
                   >À combien de tournois GameOn avez-vous déjà participé
                   ?</label
-                ><br />
+                >
                 <input
                   form="reserve"
                   type="number"
@@ -309,7 +308,6 @@
                   ></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
-                <br />
                 <input
                   form="reserve"
                   class="checkbox-input"
@@ -327,7 +325,6 @@
                   ></span>
                   Je souhaite être prévenu des prochains évènements.
                 </label>
-                <br />
               </div>
               <button
                 class="btn-submit button"
