--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       href="https://fonts.googleapis.com/css?family=DM+Sans"
       rel="stylesheet"
     />
-    <script src="./js/modal.js" defer></script>
+    <script src="./js/nav.js" defer></script>
+    <script type="module" src="./js/modal.js" defer></script>
+    <script type="module" src="./js/message.js" defer></script>
+    <script type="module" src="./js/validation.js" defer></script>
+    <script type="module" src="./js/index.js" defer></script>
   </head>
 
   <body>
@@ -326,12 +330,7 @@
                   Je souhaite être prévenu des prochains évènements.
                 </label>
               </div>
-              <button
-                class="btn-submit button"
-                type="submit"
-                id="btn-submit"
-                tabindex="0"
-              >
+              <button class="btn-submit button" type="submit" id="btn-submit">
                 C'est parti
               </button>
             </form>
