delete defer attribute in scripts type module

--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
       rel="stylesheet"
     />
     <script src="./js/nav.js" defer></script>
-    <script type="module" src="./js/modal.js" defer></script>
-    <script type="module" src="./js/message.js" defer></script>
-    <script type="module" src="./js/validation.js" defer></script>
-    <script type="module" src="./js/index.js" defer></script>
   </head>
 
   <body>
@@ -342,5 +338,9 @@
     <footer>
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
+    <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/message.js"></script>
+    <script type="module" src="./js/validation.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
