--- a/index.html
+++ b/index.html
@@ -176,120 +176,121 @@
                   <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
                 </div>
               </div>
-              <p class="text-label">
-                A quel tournoi souhaitez-vous participer cette année ?
-              </p>
-              <div id="formRadio" class="formData">
-                <input
-                  form="reserve"
-                  class="checkbox-input"
-                  type="radio"
-                  id="location1"
-                  name="location"
-                  value="New York"
-                />
-                <label class="checkbox-label" for="location1">
-                  <span
-                    class="checkbox-icon"
-                    tabindex="0"
-                    role="radio"
-                    aria-label="New York"
-                    aria-checked="false"
-                  ></span>
-                  New York</label
-                >
-                <input
-                  form="reserve"
-                  class="checkbox-input"
-                  type="radio"
-                  id="location2"
-                  name="location"
-                  value="San Francisco"
-                />
-                <label class="checkbox-label" for="location2">
-                  <span
-                    class="checkbox-icon"
-                    tabindex="0"
-                    role="radio"
-                    aria-label="San Francisco"
-                    aria-checked="false"
-                  ></span>
-                  San Francisco</label
-                >
-                <input
-                  form="reserve"
-                  class="checkbox-input"
-                  type="radio"
-                  id="location3"
-                  name="location"
-                  value="Seattle"
-                />
-                <label class="checkbox-label" for="location3">
-                  <span
-                    class="checkbox-icon"
-                    tabindex="0"
-                    role="radio"
-                    aria-label="Seattle"
-                    aria-checked="false"
-                  ></span>
-                  Seattle</label
-                >
-                <input
-                  form="reserve"
-                  class="checkbox-input"
-                  type="radio"
-                  id="location4"
-                  name="location"
-                  value="Chicago"
-                />
-                <label class="checkbox-label" for="location4">
-                  <span
-                    class="checkbox-icon"
-                    tabindex="0"
-                    role="radio"
-                    aria-label="Chicago"
-                    aria-checked="false"
-                  ></span>
-                  Chicago</label
-                >
-                <input
-                  form="reserve"
-                  class="checkbox-input"
-                  type="radio"
-                  id="location5"
-                  name="location"
-                  value="Boston"
-                />
-                <label class="checkbox-label" for="location5">
-                  <span
-                    class="checkbox-icon"
-                    tabindex="0"
-                    role="radio"
-                    aria-label="Boston"
-                    aria-checked="false"
-                  ></span>
-                  Boston</label
-                >
-                <input
-                  form="reserve"
-                  class="checkbox-input"
-                  type="radio"
-                  id="location6"
-                  name="location"
-                  value="Portland"
-                />
-                <label class="checkbox-label" for="location6">
-                  <span
-                    class="checkbox-icon"
-                    tabindex="0"
-                    role="radio"
-                    aria-label="Portland"
-                    aria-checked="false"
-                  ></span>
-                  Portland</label
-                >
-              </div>
-
+              <fieldset id="formRadio" class="formData">
+                <legend class="text-label">
+                  A quel tournoi souhaitez-vous participer cette année ?
+                </legend>
+                <div>
+                  <input
+                    form="reserve"
+                    class="checkbox-input"
+                    type="radio"
+                    id="location1"
+                    name="location"
+                    value="New York"
+                  />
+                  <label class="checkbox-label" for="location1">
+                    <span
+                      class="checkbox-icon"
+                      tabindex="0"
+                      role="radio"
+                      aria-label="New York"
+                      aria-checked="false"
+                    ></span>
+                    New York</label
+                  >
+                  <input
+                    form="reserve"
+                    class="checkbox-input"
+                    type="radio"
+                    id="location2"
+                    name="location"
+                    value="San Francisco"
+                  />
+                  <label class="checkbox-label" for="location2">
+                    <span
+                      class="checkbox-icon"
+                      tabindex="0"
+                      role="radio"
+                      aria-label="San Francisco"
+                      aria-checked="false"
+                    ></span>
+                    San Francisco</label
+                  >
+                  <input
+                    form="reserve"
+                    class="checkbox-input"
+                    type="radio"
+                    id="location3"
+                    name="location"
+                    value="Seattle"
+                  />
+                  <label class="checkbox-label" for="location3">
+                    <span
+                      class="checkbox-icon"
+                      tabindex="0"
+                      role="radio"
+                      aria-label="Seattle"
+                      aria-checked="false"
+                    ></span>
+                    Seattle</label
+                  >
+                  <input
+                    form="reserve"
+                    class="checkbox-input"
+                    type="radio"
+                    id="location4"
+                    name="location"
+                    value="Chicago"
+                  />
+                  <label class="checkbox-label" for="location4">
+                    <span
+                      class="checkbox-icon"
+                      tabindex="0"
+                      role="radio"
+                      aria-label="Chicago"
+                      aria-checked="false"
+                    ></span>
+                    Chicago</label
+                  >
+                  <input
+                    form="reserve"
+                    class="checkbox-input"
+                    type="radio"
+                    id="location5"
+                    name="location"
+                    value="Boston"
+                  />
+                  <label class="checkbox-label" for="location5">
+                    <span
+                      class="checkbox-icon"
+                      tabindex="0"
+                      role="radio"
+                      aria-label="Boston"
+                      aria-checked="false"
+                    ></span>
+                    Boston</label
+                  >
+                  <input
+                    form="reserve"
+                    class="checkbox-input"
+                    type="radio"
+                    id="location6"
+                    name="location"
+                    value="Portland"
+                  />
+                  <label class="checkbox-label" for="location6">
+                    <span
+                      class="checkbox-icon"
+                      tabindex="0"
+                      role="radio"
+                      aria-label="Portland"
+                      aria-checked="false"
+                    ></span>
+                    Portland</label
+                  >
+                </div>
+              </fieldset>
               <div id="formMentions" class="formData">
                 <input
                   form="reserve"
@@ -338,9 +339,9 @@
     <footer>
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
-    <script type="module" src="./js/modal.js"></script>
-    <script type="module" src="./js/message.js"></script>
-    <script type="module" src="./js/validation.js"></script>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/modal.js" er></script>
+    <script type="module" src="./js/message.js" er></script>
+    <script type="module" src="./js/validation.js" er></script>
+    <script type="module" src="./js/index.js" er></script>
   </body>
 </html>
