update index.html content typo error

--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
     <footer>
       <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
     </footer>
-    <script type="module" src="./js/modal.js" er></script>
-    <script type="module" src="./js/message.js" er></script>
-    <script type="module" src="./js/validation.js" er></script>
-    <script type="module" src="./js/index.js" er></script>
+    <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/message.js"></script>
+    <script type="module" src="./js/validation.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
